--- a/core.css
+++ b/core.css
@@ -848,7 +848,7 @@ The 2 items above are not owned by me, They go to there respected owners
        margin: 0px;
    }
    #app-mount .typeWindows_e41dab:after {
-       content: "ARTEM SOSI HUI";
+       content: "GGO Kirito v1.3.5 By VaporousCreeper";
        color: rgb(255,255,255,0.5);
        font-weight: 500;
 
